--- a/public/css/base.css
+++ b/public/css/base.css
@@ -24,7 +24,7 @@ section {
   justify-content: start;
   align-content: space-around;
   flex-wrap: wrap;
-  background-image: url("./../images/woman.jpg");
+  background-image: url("./../images/woman.avif");
   background-size: cover;
 }
 
@@ -45,7 +45,7 @@ section {
   display: flex;
   flex-wrap: wrap;
   align-content: space-around;
-  background-image: url("./../images/manPhone.jpg");
+  background-image: url("./../images/manPhone.avif");
   background-size: cover;
 }
 
@@ -53,7 +53,7 @@ section {
   display: flex;
   flex-wrap: wrap;
   align-content: space-around;
-  background-image: url("./../images/womanCard.jpg");
+  background-image: url("./../images/womanCard.avif");
   background-size: cover;
 }
 
