--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,7 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"); */
+
+@font-face {
+  font-family: Roboto;
+  src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
+  font-display: swap;
+}
 
 :root {
-  --color-primary: #181838;
+  --color-primary: #070930;
   --color-bordergrey: #aeaeae;
 
   font-family: "Roboto", sans-serif;
@@ -12,7 +18,6 @@
   padding: 0;
 }
 body {
-  background-color: var(--color-primary);
   color: #fff;
 }
 section {
@@ -73,6 +78,10 @@ section {
 #head-land h1 span,
 #head-land h2 span {
   color: var(--color-primary);
+}
+
+#questions {
+  background-color: var(--color-primary);
 }
 
 #questions h2 {
