--- a/public/css/base.css
+++ b/public/css/base.css
@@ -29,8 +29,7 @@ section {
   justify-content: start;
   align-content: space-around;
   flex-wrap: wrap;
-  background-image: url("./../images/woman.avif");
-  background-size: cover;
+  background-color: var(--color-primary);
 }
 
 #benefits {
@@ -77,7 +76,7 @@ section {
 
 #head-land h1 span,
 #head-land h2 span {
-  color: var(--color-primary);
+  color: #df9c0c;
 }
 
 #questions {
@@ -96,6 +95,22 @@ section {
   margin-top: 10%;
   border: none;
   background: none;
+}
+#wpp-fixed-link {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+#wpp-simulation {
+  width: 90%;
+  margin-top: 10%;
+  padding: 4%;
+  border-radius: 50px;
+  border: none;
+  background-color: #1ea34f;
+  color: #fff;
+  font-size: 20px;
 }
 
 .intersection {
@@ -192,17 +207,27 @@ section {
   transition: 1s ease all;
 }
 
+.img-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 @media (max-width: 450px) {
   #benefits {
     height: 135vh;
   }
-  #head-land,
+  #head-land {
+    height: 110vh;
+  }
   #know-how,
   #fgts-explanation {
     height: 100vh;
   }
   #explain {
-    height: 60vh;
+    height: 75vh;
+    padding-top: 4%;
+    padding-bottom: 4%;
   }
 }
 
