--- a/public/css/base.css
+++ b/public/css/base.css
@@ -30,6 +30,14 @@ footer {
   background-color: var(--color-footer);
   color: #aeaeae;
 }
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 #benefits {
   display: flex;
